--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -29,9 +29,8 @@ tracing = { workspace = true }
 
 astria-utils = { path = "../astria-utils", features = [
   "config",
-  "config-tests",
+  "derive",
 ] }
-astria-config-derive = { path = "../astria-config-derive" }
 astria-proto = { path = "../astria-proto", features = ["client"] }
 sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
   "http",
@@ -43,6 +42,7 @@ sequencer-validation = { package = "astria-sequencer-validation", path = "../ast
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 [dev-dependencies]
+astria-utils = { path = "../astria-utils", features = [ "config-tests" ]}
 base64 = { workspace = true }
 once_cell = { workspace = true }
 figment = { workspace = true, features = ["test"] }
