--- a/crates/astria-config-derive/Cargo.toml
+++ b/crates/astria-config-derive/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = { workspace = true, features = ["extra-traits", "full"] }
-quote = { workspace = true }
+quote = "1.0.33"
+syn = { version = "2.0.37", features = ["extra-traits", "full"] }
 
 [dev-dependencies]
 trybuild = { version = "1.0.85", features = ["diff"] }
