--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -31,10 +31,7 @@ tokio-util = { workspace = true, features = ["rt"] }
 tonic = { workspace = true }
 tracing = { workspace = true }
 
-astria-utils = { path = "../astria-utils", features = [
-  "config",
-  "derive",
-] }
+astria-config = { path = "../astria-config", features = ["config", "derive"] }
 sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
   "http",
   "websocket",
@@ -49,7 +46,7 @@ sequencer-validation = { package = "astria-sequencer-validation", path = "../ast
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 [dev-dependencies]
-astria-utils = { path = "../astria-utils", features = [ "config-tests" ]}
+astria-config = { path = "../astria-config", features = ["config-tests"] }
 base64 = { workspace = true }
 once_cell = { workspace = true }
 figment = { workspace = true, features = ["test"] }
