--- a/crates/astria-cli/Cargo.toml
+++ b/crates/astria-cli/Cargo.toml
@@ -18,6 +18,10 @@ tokio = { workspace = true, features = ["rt", "macros"] }
 tracing = { workspace = true }
 which = { workspace = true }
 
-astria-sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
-    "http",
-] }
+[dependencies.astria-sequencer-client]
+package = "astria-sequencer-client"
+path = "../astria-sequencer-client"
+features = ["http"]
+
+[dev-dependencies]
+tempfile = { workspace = true }
