--- a/crates/astria-cli/Cargo.toml
+++ b/crates/astria-cli/Cargo.toml
@@ -24,4 +24,6 @@ path = "../astria-sequencer-client"
 features = ["http"]
 
 [dev-dependencies]
+assert_cmd = "2.0.12"
+once_cell = { workspace = true }
 tempfile = { workspace = true }
