--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -41,6 +41,7 @@ sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequ
 ] }
 sequencer-validation = { package = "astria-sequencer-validation", path = "../astria-sequencer-validation" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
+tryhard = "0.5.1"
 
 [dev-dependencies]
 once_cell = { workspace = true }
