--- a/crates/astria-config/Cargo.toml
+++ b/crates/astria-config/Cargo.toml
@@ -12,4 +12,4 @@ once_cell = { workspace = true, optional = true }
 regex = { workspace = true, optional = true }
 
 [features]
-config-tests = ["figment/test", "dep:once_cell", "dep:regex"]
+tests = ["figment/test", "dep:once_cell", "dep:regex"]
