--- a/crates/astria-config/Cargo.toml
+++ b/crates/astria-config/Cargo.toml
@@ -11,5 +11,8 @@ figment = { workspace = true, features = ["env"] }
 once_cell = { workspace = true, optional = true }
 regex = { workspace = true, optional = true }
 
+[dev-dependencies]
+serde = { workspace = true, features = ["derive"] }
+
 [features]
 tests = ["figment/test", "dep:once_cell", "dep:regex"]
