--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -46,7 +46,9 @@ path = "../astria-sequencer-client"
 features = ["http"]
 
 [dev-dependencies]
-config = { package = "astria-config", path = "../astria-config", features = ["tests"] }
+config = { package = "astria-config", path = "../astria-config", features = [
+  "tests",
+] }
 proto = { package = "astria-proto", path = "../astria-proto" }
 
 impl-serde = "0.4.0"
