--- a/.github/workflows/reusable-cargo-version.yml
+++ b/.github/workflows/reusable-cargo-version.yml
@@ -18,7 +18,7 @@ jobs:
       - run: git fetch --all --tags
       - name: Check Release Version
         id: release_version
-        uses: thebongy/version-check@v1
+        uses: joroshiba/version-check@v2
         with:
           file: ${{ format('crates/astria-{0}/Cargo.toml', inputs.package-name) }}
           tagFormat: ${{ format('v${{version}}--{0}', inputs.package-name) }}
