--- a/crates/astria-config-derive/Cargo.toml
+++ b/crates/astria-config-derive/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+itertools = "0.11.0"
 quote = "1.0.33"
 syn = { version = "2.0.37", features = ["extra-traits", "full"] }
 
