use fork of tendermint with backported reqwest client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,3 +64,9 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 which = "4.4.0"
 wiremock = "0.5"
+
+[patch.crates-io]
+tendermint = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
+tendermint-config = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
+tendermint-proto = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
+tendermint-rpc = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
