fix cargo tomls after adding clap back to workspace deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ axum = "0.6.16"
 backon = "0.4.1"
 base64 = "0.21"
 bytes = "1.4"
+clap = { version = "4", features = ["derive"] }
 color-eyre = "0.6"
 ed25519-consensus = "2.1.0"
 eyre = "0.6"
@@ -62,6 +63,5 @@ tokio = "1.28"
 tokio-util = "0.7.9"
 tonic = "0.9"
 tracing = "0.1"
-tracing-subscriber = "0.3"
 which = "4.4.0"
 wiremock = "0.5"
