--- a/crates/astria-cli/Cargo.toml
+++ b/crates/astria-cli/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { workspace = true, features = ["env"] }
+clap = { workspace = true, features = ["derive", "env"] }
 color-eyre = { workspace = true }
 ed25519-consensus = { workspace = true }
 hex = { workspace = true }
