--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "crates/astria-celestia-jsonrpc-client",
   "crates/astria-composer",
   "crates/astria-conductor",
+  "crates/astria-cli",
   "crates/astria-proto",
   "crates/astria-sequencer",
   "crates/astria-sequencer-client",
@@ -21,6 +22,7 @@ axum = "0.6.16"
 backon = "0.4.1"
 base64 = "0.21"
 bytes = "1.4"
+clap = { version = "4" }
 color-eyre = "0.6"
 ed25519-consensus = "2.1.0"
 eyre = "0.6"
@@ -61,7 +63,6 @@ tokio = "1.28"
 tokio-util = "0.7.9"
 tonic = "0.9"
 tracing = "0.1"
-tracing-subscriber = "0.3"
 which = "4.4.0"
 wiremock = "0.5"
 
