--- a/crates/astria-cli/test-utils/Cargo.toml
+++ b/crates/astria-cli/test-utils/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 once_cell = { workspace = true }
 tempfile = { workspace = true }
-tokio = { workspace = true }
+tokio = { workspace = true, features = ['sync'] }
