--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "crates/astria-celestia-jsonrpc-client",
   "crates/astria-composer",
   "crates/astria-conductor",
+  "crates/astria-optimism",
   "crates/astria-proto",
   "crates/astria-sequencer",
   "crates/astria-sequencer-client",
