--- a/crates/astria-optimism/Cargo.toml
+++ b/crates/astria-optimism/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 ethers = {version = "2.0", features = ["optimism", "ws"] }
 eyre = { workspace = true }
+futures = { workspace = true }
 hex = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
