--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -38,6 +38,7 @@ tokio = { workspace = true, features = [
 ] }
 tokio-util = { workspace = true, features = ["rt"] }
 tracing = { workspace = true, features = ["attributes"] }
+tryhard = { workspace = true }
 
 [dependencies.sequencer-client]
 package = "astria-sequencer-client"
