--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -47,11 +47,8 @@ features = ["http"]
 
 [dev-dependencies]
 proto = { package = "astria-proto", path = "../astria-proto" }
-
-impl-serde = "0.4.0"
-tokio-test = "0.4.2"
+test_utils = { package = "astria-test-utils", path = "../astria-test-utils", features = ["geth"] }
 
 figment = { workspace = true, features = ["test"] }
-jsonrpsee = { workspace = true, features = ["macros", "server"] }
 tendermint-rpc = { workspace = true }
 wiremock = { workspace = true }
