fix rlp encoding of deposit txs

--- a/crates/astria-optimism/Cargo.toml
+++ b/crates/astria-optimism/Cargo.toml
@@ -8,4 +8,5 @@ ethers = {version = "2.0", features = ["optimism", "ws"] }
 eyre = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true }
+rlp = "0.5"
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
