add test to check that reconnect handler works

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ tendermint-proto = "0.33.2"
 tendermint-rpc = "0.33.2"
 thiserror = "1"
 tokio = "1.28"
+tokio-test = "0.4.2"
 tokio-util = "0.7.9"
 tonic = "0.9"
 tracing = "0.1"
