--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -48,6 +48,7 @@ features = ["http"]
 [dev-dependencies]
 proto = { package = "astria-proto", path = "../astria-proto" }
 test_utils = { package = "astria-test-utils", path = "../astria-test-utils", features = ["geth"] }
+tokio-test = { workspace = true }
 
 figment = { workspace = true, features = ["test"] }
 tendermint-rpc = { workspace = true }
