--- a/crates/astria-test-utils/Cargo.toml
+++ b/crates/astria-test-utils/Cargo.toml
@@ -11,16 +11,18 @@ impl-serde = { version = "0.4.0", optional = true }
 jsonrpsee = { workspace = true, optional = true, features = ["macros", "server"] }
 rand = { workspace = true, optional = true }
 tokio = { workspace = true, optional = true }
+tracing = { workspace = true, optional = true }
 
 [dev-dependencies]
-tokio-test = { version = "0.4.2" }
+tokio-test = { workspace = true }
 
 [features]
 geth = [
+  "dep:ethers",
   "dep:impl-serde",
   "dep:jsonrpsee",
   "dep:rand",
   "dep:tokio",
-  "dep:ethers",
-  "tokio/rt"
+  "tokio/rt",
+  "dep:tracing",
 ]
