--- a/crates/astria-test-utils/Cargo.toml
+++ b/crates/astria-test-utils/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2021"
 [dependencies]
 ethers = { version = "2.0.7", features = ["ws"], optional = true }
 impl-serde = { version = "0.4.0", optional = true }
-jsonrpsee = { workspace = true, optional = true, features = ["macros", "server"] }
+jsonrpsee = { workspace = true, optional = true, features = [
+  "macros",
+  "server",
+] }
 rand = { workspace = true, optional = true }
 tokio = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
