--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ which = "4.4.0"
 wiremock = "0.5"
 
 [patch.crates-io]
+ethers = { git = "https://github.com/noot/ethers-rs", rev = "4c1ea8e181609ab87184fad69b58652147d8b637" }
 tendermint = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
 tendermint-config = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
 tendermint-proto = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
