--- a/.github/workflows/reusable-success.yml
+++ b/.github/workflows/reusable-success.yml
@@ -2,14 +2,17 @@ name: Reusable Success Check
 
 on:
   workflow_call:
+    inputs:
+      success:
+        required: true
+        type: boolean
 
 jobs:
   success:
     runs-on: ubuntu-latest
     if: ${{ always() && !cancelled() }}
     steps:
-      - run: echo ${{ toJson(needs) }}
-      - if: ${{ contains(needs.*.result, 'failure') }}
+      - if: !inputs.success
         run: exit 1
-      - if: ${{ !contains(needs.*.result, 'failure') }}
+      - if: inputs.success
         run: exit 0
