--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -65,3 +65,5 @@ jobs:
     if: ${{ always() && !cancelled() }}
     needs: [composer, conductor, sequencer, sequencer-relayer]
     uses: ./.github/workflows/reusable-success.yml
+    with:
+      success: ${{ !contains(needs.*.result, 'failure') }}
