--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -73,3 +73,5 @@ jobs:
     needs: [proto, rust, toml, markdown]
     if: ${{ always() && !cancelled() }}
     uses: ./.github/workflows/reusable-success.yml
+    with:
+      success: ${{ !contains(needs.*.result, 'failure') }}
