--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -130,3 +130,5 @@ jobs:
     if: ${{ always() && !cancelled() }}
     needs: [compiles, rust, doctest, clippy, lockfile]
     uses: ./.github/workflows/reusable-success.yml
+    with:
+      success: ${{ !contains(needs.*.result, 'failure') }}
