--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -37,3 +37,6 @@ ASTRIA_CONDUCTOR_DISABLE_EMPTY_BLOCK_EXECUTION=false
 
 # the sequencer block height that the rollup's first block was in
 ASTRIA_CONDUCTOR_INITIAL_SEQUENCER_BLOCK_HEIGHT=1
+
+ASTRIA_CONDUCTOR_ETHEREUM_L1_URL="ws://127.0.0.1:8545"
+ASTRIA_CONDUCTOR_OPTIMISM_PORTAL_CONTRACT_ADDRESS=""
