--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -40,3 +40,4 @@ ASTRIA_CONDUCTOR_INITIAL_SEQUENCER_BLOCK_HEIGHT=1
 
 ASTRIA_CONDUCTOR_ETHEREUM_L1_URL="ws://127.0.0.1:8545"
 ASTRIA_CONDUCTOR_OPTIMISM_PORTAL_CONTRACT_ADDRESS=""
+ASTRIA_CONDUCTOR_INITIAL_ETHEREUM_l1_BLOCK_HEIGHT=1
