implement all config tests in terms of astria-config

--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -13,7 +13,6 @@ deadpool = { version = "0.10.0", default-features = false, features = [
   "managed",
 ] }
 ed25519-consensus = { workspace = true }
-figment = { workspace = true, features = ["env"] }
 futures = { workspace = true }
 hex = { workspace = true }
 humantime = { workspace = true }
@@ -34,6 +33,7 @@ tracing = { workspace = true }
 tryhard = { workspace = true }
 
 celestia-client = { package = "astria-celestia-client", path = "../astria-celestia-client" }
+config = { package = "astria-config", path = "../astria-config" }
 proto = { package = "astria-proto", path = "../astria-proto", features = [
   "client",
 ] }
@@ -45,14 +45,12 @@ sequencer-validation = { package = "astria-sequencer-validation", path = "../ast
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 [dev-dependencies]
+jsonrpsee = { workspace = true, features = ["server"] }
+
 astria-sequencer-types = { path = "../astria-sequencer-types", features = [
   "test-utils",
 ] }
-once_cell = { workspace = true }
-figment = { workspace = true, features = ["test"] }
-jsonrpsee = { workspace = true, features = ["server"] }
-regex = { workspace = true }
-
+config = { package = "astria-config", path = "../astria-config", features = ["tests"] }
 proto = { package = "astria-proto", path = "../astria-proto", features = [
   "server",
 ] }
