--- a/crates/astria-config/Cargo.toml
+++ b/crates/astria-config/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { workspace = true }
-figment = { workspace = true, features = ["env"] }
+figment = { version = "0.10.8", features = ["env"] }
+
 once_cell = { workspace = true, optional = true }
 regex = { workspace = true, optional = true }
+serde = { workspace = true }
 
 [dev-dependencies]
 serde = { workspace = true, features = ["derive"] }
