--- a/crates/astria-config/Cargo.toml
+++ b/crates/astria-config/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 figment = { version = "0.10.8", features = ["env"] }
 
+names = { version = "0.14", optional = true, default-features = false }
 once_cell = { workspace = true, optional = true }
 regex = { workspace = true, optional = true }
 serde = { workspace = true }
@@ -16,4 +17,4 @@ serde = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 
 [features]
-tests = ["figment/test", "dep:once_cell", "dep:regex"]
+tests = ["figment/test", "dep:names", "dep:once_cell", "dep:regex"]
