fix(ci): success test proper reporting (#534)
## Summary
Fixes the "success" reusable job which was always passing.

## Background
When migrated to reusable version, started always passing. This fixes,
the reusable action didn't have access to the `needs` values.

## Changes
- Pass in success value.

## Testing
On PR tests

--- a/.github/workflows/reusable-success.yml
+++ b/.github/workflows/reusable-success.yml
@@ -2,13 +2,17 @@ name: Reusable Success Check
 
 on:
   workflow_call:
+    inputs:
+      success:
+        required: true
+        type: boolean
 
 jobs:
   success:
     runs-on: ubuntu-latest
     if: ${{ always() && !cancelled() }}
     steps:
-      - if: ${{ contains(needs.*.result, 'failure') }}
+      - if: ${{ !inputs.success }}
         run: exit 1
-      - if: ${{ !contains(needs.*.result, 'failure') }}
+      - if: ${{ inputs.success }}
         run: exit 0
