config: define service configs in terms of a central crate (#537)
## Summary
Provide a central crate for creating astria service configs.

## Background
There was a lot of code duplication for setting up config for astria
services. This bundles it in one place.

## Changes
- Define a `astria-config` crate.
- Rewrite all service tests and definitions in terms of this crate.
- Use unique test prefixes

## Testing
- Tests have have been adjusted and still pass.
- `astria-config` comes with doc tests

## Related Issues

closes https://github.com/astriaorg/astria/issues/240
closes https://github.com/astriaorg/astria/issues/398
closes https://github.com/astriaorg/astria/issues/416

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "crates/astria-celestia-mock",
   "crates/astria-composer",
   "crates/astria-conductor",
+  "crates/astria-config",
   "crates/astria-cli",
   "crates/astria-proto",
   "crates/astria-sequencer",
@@ -27,7 +28,6 @@ clap = "4"
 color-eyre = "0.6"
 ed25519-consensus = "2.1.0"
 eyre = "0.6"
-figment = "0.10.8"
 futures = "0.3"
 hex = "0.4"
 humantime = "2.1.0"
