--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -12,6 +12,7 @@ proto = { package = "astria-proto", path = "../astria-proto" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 ethers = { version = "2.0.7", features = ["ws"] }
+pin-project-lite = "0.2.13"
 secrecy = { version = "0.8", features = ["serde"] }
 
 async-trait = { workspace = true }
@@ -29,7 +30,9 @@ rand = { workspace = true }
 regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+sha2 = { workspace = true }
 tendermint = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true, features = [
   "macros",
   "rt-multi-thread",
@@ -44,6 +47,10 @@ tryhard = { workspace = true }
 package = "astria-sequencer-client"
 path = "../astria-sequencer-client"
 features = ["http"]
+
+[dependencies.sequencer-types]
+package = "astria-sequencer-types"
+path = "../astria-sequencer-types"
 
 [dev-dependencies]
 config = { package = "astria-config", path = "../astria-config", features = [
