--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,7 +95,9 @@ jobs:
     if: needs.run_checker.outputs.run_tests == 'true'
     steps:
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@1.72.0
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
       - uses: Swatinem/rust-cache@v2.6.1
         with:
           cache-provider: "buildjet"
