--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,9 @@ jobs:
     if: needs.run_checker.outputs.run_tests == 'true'
     steps:
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@1.72.0
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: llvm-tools-preview
       - uses: Swatinem/rust-cache@v2.6.1
         with:
           cache-provider: "buildjet"
@@ -76,7 +78,7 @@ jobs:
       - name: Run tests
         timeout-minutes: 20
         run: |
-          cargo llvm-cov nextest --release --workspace \
+          cargo llvm-cov nextest run --release --workspace \
           --locked \
           --all-features \
           --all-targets \
