refactor optimism integration to use PreExecutionHook trait object

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -38,6 +38,5 @@ ASTRIA_CONDUCTOR_DISABLE_EMPTY_BLOCK_EXECUTION=false
 # the sequencer block height that the rollup's first block was in
 ASTRIA_CONDUCTOR_INITIAL_SEQUENCER_BLOCK_HEIGHT=1
 
-ASTRIA_CONDUCTOR_ETHEREUM_L1_URL="ws://127.0.0.1:8545"
-ASTRIA_CONDUCTOR_OPTIMISM_PORTAL_CONTRACT_ADDRESS=""
-ASTRIA_CONDUCTOR_INITIAL_ETHEREUM_l1_BLOCK_HEIGHT=1
+# if op-stack deposit derivations are enabled, this config must be set
+ASTRIA_CONDUCTOR_ENABLE_OPTIMISM={ ethereum_l1_url="ws://127.0.0.1:8545", optimism_portal_contract_address="", initial_ethereum_l1_block_height=1 }
