--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,6 +75,7 @@ jobs:
       - name: install foundry
         run: | 
           curl -L https://foundry.paradigm.xyz | bash
+          source /home/runner/.bashrc
           foundryup
       - name: Build tests
         run: |
