--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -22,7 +22,7 @@ ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
 # - "SoftOnly" -> blocks are only pulled from the sequencer
 # - "FirmOnly" -> blocks are only pulled from DA
 # - "SoftAndFirm" -> blocks are pulled from both the sequencer and DA
-ASTRIA_CONDUCTOR_EXECUTION_COMMIT_LEVEL="SoftAndFirm"
+ASTRIA_CONDUCTOR_EXECUTION_COMMIT_LEVEL="SoftOnly"
 
 # The URL to a fully trusted CometBFT/Sequencer to issue cometbft RPCs. Example
 # RPCs are subscribing to new blocks, fetching blocks at a given level, or
@@ -39,4 +39,5 @@ ASTRIA_CONDUCTOR_DISABLE_EMPTY_BLOCK_EXECUTION=false
 ASTRIA_CONDUCTOR_INITIAL_SEQUENCER_BLOCK_HEIGHT=1
 
 # if op-stack deposit derivations are enabled, this config must be set
-ASTRIA_CONDUCTOR_ENABLE_OPTIMISM={ ethereum_l1_url="ws://127.0.0.1:8545", optimism_portal_contract_address="", initial_ethereum_l1_block_height=1 }
+# uncomment this line and set the `optimism_portal_contract_address` to enable op-stack deposits
+# ASTRIA_CONDUCTOR_ENABLE_OPTIMISM={ethereum_l1_url="ws://127.0.0.1:8545",optimism_portal_contract_address="",initial_ethereum_l1_block_height=1}
