--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -22,7 +22,7 @@ ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
 # - "SoftOnly" -> blocks are only pulled from the sequencer
 # - "FirmOnly" -> blocks are only pulled from DA
 # - "SoftAndFirm" -> blocks are pulled from both the sequencer and DA
-ASTRIA_CONDUCTOR_EXECUTION_COMMIT_LEVEL="SoftOnly"
+ASTRIA_CONDUCTOR_EXECUTION_COMMIT_LEVEL="SoftAndFirm"
 
 # The URL to a fully trusted CometBFT/Sequencer to issue cometbft RPCs. Example
 # RPCs are subscribing to new blocks, fetching blocks at a given level, or
