--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ members = [
   "crates/astria-cli",
   "crates/astria-composer",
   "crates/astria-conductor",
+  "crates/astria-config",
   "crates/astria-cli",
   "crates/astria-optimism",
+  "crates/astria-proto",
   "crates/astria-sequencer",
   "crates/astria-sequencer-client",
   "crates/astria-sequencer-relayer",
