initial da block height added to config

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -37,3 +37,6 @@ ASTRIA_CONDUCTOR_DISABLE_EMPTY_BLOCK_EXECUTION=false
 
 # the sequencer block height that the rollup's first block was in
 ASTRIA_CONDUCTOR_INITIAL_SEQUENCER_BLOCK_HEIGHT=1
+
+# the da block height that the rollup stated at
+ASTRIA_CONDUCTOR_INITIAL_DA_BLOCK_HEIGHT=1
