--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -33,6 +33,18 @@ ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657/websocket"
 # the sequencer block height that the rollup's first block was in
 ASTRIA_CONDUCTOR_INITIAL_SEQUENCER_BLOCK_HEIGHT=1
 
-# if op-stack deposit derivations are enabled, this config must be set
-# uncomment this line and set the `optimism_portal_contract_address` to enable op-stack deposits
-# ASTRIA_CONDUCTOR_ENABLE_OPTIMISM={ethereum_l1_url="ws://127.0.0.1:8545",optimism_portal_contract_address="",initial_ethereum_l1_block_height=1}
+# set to true to enable op-stack deposit derivations
+ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=false
+
+# Websocket URL of Ethereum L1 node.
+# Only used if `enable_optimism` is true.
+ASTRIA_CONDUCTOR_ETHEREUM_L1_URL="ws://127.0.0.1:8545",
+
+# Contract address of the OptimismPortal contract on L1.
+# Only used if `enable_optimism` is true.
+ASTRIA_CONDUCTOR_OPTIMISM_PORTAL_CONTRACT_ADDRESS=""
+
+# The block height of the Ethereum L1 chain that the
+# OptimismPortal contract was deployed at.
+# Only used if `enable_optimism` is true.
+ASTRIA_CONDUCTOR_INITIAL_ETHEREUM_L1_BLOCK_HEIGHT=1
