--- a/crates/astria-proto/buf.gen.yaml
+++ b/crates/astria-proto/buf.gen.yaml
@@ -7,6 +7,7 @@ plugins:
     opt:
      - extern_path=.tendermint.types=::tendermint-proto::types
      - extern_path=.tendermint.abci=::tendermint-proto::abci
+     - extern_path=.penumbra=::penumbra-proto
      - type_attribute=.astria.primitive.v1.Uint128=#[derive(Copy)]
   - plugin: buf.build/community/neoeinstein-tonic:v0.3.0
     out: .
