--- a/crates/astria-proto/proto/buf.yaml
+++ b/crates/astria-proto/proto/buf.yaml
@@ -1,7 +1,8 @@
 version: v1
 name: buf.build/astria/astria
 deps:
-  - buf.build/tendermint/tendermint
+  # - buf.build/tendermint/tendermint
+  - buf.build/penumbra-zone/penumbra
 breaking:
   use:
     - FILE
