--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ async-trait = "0.1.52"
 axum = "0.6.16"
 backon = "0.4.1"
 base64 = "0.21"
+base64-serde = "0.7.0"
 bytes = "1.4"
 clap = "4"
 color-eyre = "0.6"
@@ -40,8 +41,8 @@ once_cell = "1.17.1"
 sha2 = "0.10"
 serde = "1"
 serde_json = "1"
-prost = "0.11"
-prost-types = "0.11"
+prost = "0.12"
+prost-types = "0.12"
 rand = "0.8.5"
 regex = "1.9"
 # disable default features and explicitly enable rustls-tls to ensure openssl is disabled
@@ -50,22 +51,16 @@ reqwest = { version = "0.11", default-features = false, features = [
   "rustls-tls",
 ] }
 tempfile = "3.6.0"
-tendermint = "0.33.2"
-tendermint-config = "0.33.2"
-tendermint-proto = "0.33.2"
-tendermint-rpc = "0.33.2"
+tendermint = "0.34"
+tendermint-config = "0.34"
+tendermint-proto = "0.34"
+tendermint-rpc = "0.34"
 thiserror = "1"
 tokio = "1.28"
 tokio-test = "0.4.2"
 tokio-util = "0.7.9"
-tonic = "0.9"
+tonic = "0.10"
 tracing = "0.1"
 tryhard = "0.5.1"
 which = "4.4.0"
 wiremock = "0.5"
-
-[patch.crates-io]
-tendermint = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
-tendermint-config = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
-tendermint-proto = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
-tendermint-rpc = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
