conductor run loop startup changes,

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -33,5 +33,5 @@ ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657/websocket"
 # the sequencer block height that the rollup's first block was in
 ASTRIA_CONDUCTOR_INITIAL_SEQUENCER_BLOCK_HEIGHT=1
 
-# the da block height that the rollup stated at
+# the data availability block height that the rollup's first block was in
 ASTRIA_CONDUCTOR_INITIAL_DA_BLOCK_HEIGHT=1
